--- a/package.json
+++ b/package.json
@@ -7,7 +7,17 @@
     "jpegtran-bin": "^4.0.0",
     "optipng-bin": "^6.0.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "browser-sync": "^2.27.10",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.1.0",
+    "sass": "^1.56.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
